--- a/assignment 1.ipynb
+++ b/assignment 1.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "id": "3a7a9e20-ec59-4ce2-b56b-e1a16a940672",
    "metadata": {},
    "outputs": [
@@ -306,21 +306,22 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the value  10\n"
+      "Enter the value  4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your value 10 is doubled and result is 20\n"
+      "your value 4 is doubled. \n",
+      " Doubled Value is: 8\n"
      ]
     }
    ],
    "source": [
     "dv=int(input(\"Enter the value \"))\n",
     "dv2=dv*2\n",
-    "print(f\"your value {dv} is doubled and result is\",dv2)"
+    "print(f\"your value {dv} is doubled. \\n Doubled Value is:\",dv2)"
    ]
   },
   {
